--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "tightenco/ziggy": "^1.0",
-        "vinkla/hashids": "^11.0"
+        "spatie/laravel-backup": "^8.3",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
