--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "socialiteproviders/fusionauth": "^5.0",
         "spatie/laravel-backup": "^8.3",
         "tightenco/ziggy": "^1.0"
     },
